# rusty-diesel-rocket

./: .gitignore  Cargo.toml  README.md  Rocket.toml  package.json  webpack.config.js
frontend/: client.js  index.js
frontend/actions/: PostActions.js  UserActions.js
frontend/components/: Footer.js  Header.js  Layout.js  Menu.js  Post.js
frontend/pages/: About.js  CoinhiveUser.js  Home.js  Layout.js  Settings.js
frontend/reducers/: UserReducer.js  index.js  postReducer.js  userReducer.js
frontend/stores/: PostStore.js
migrations/20171001101038_create_posts/: up.sql
src/: db.rs  main.rs
src/controllers/: coinhive.rs  markdown.rs  mod.rs  post.rs  react.rs  user.rs
src/models/: mod.rs  post.rs  user.rs
static/: add_post.html.tera  anonymous.html.tera  edit_post.html.tera  index.html  index.html.tera  login.html.tera  markdown.html.tera  master.html.tera  register.html.tera  view_post.html.tera
static/assets/: bundle.js
static/css/: side-menu.css  style.css
static/md/: index.md  test.md
