[package]
name = "xmr_webminer"
version = "0.1.0"
authors = ["Alko89 <alefer89@gmail.com>"]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
dotenv = "0.10"
diesel = { version = "0.14", features = ["postgres"] }
diesel_codegen = { version = "0.14", features = ["postgres"] }
r2d2 = "0.7"
r2d2-diesel = "0.14"
rust-argon2 = "0.2"
rand = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tera = ""
reqwest = ""

[dependencies.rocket_codegen]
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["tera_templates", "json"]
